--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "react": "^19.0.0",
+    "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
-    "recharts": "^3.0.2",
+    "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
