--- a/package.json
+++ b/package.json
@@ -20,17 +20,23 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.50.3",
+    "@supabase/supabase-js": "^2.86.0",
+    "@types/prismjs": "^1.26.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "googleapis": "^161.0.0",
+    "grapesjs": "^0.22.14",
+    "grapesjs-preset-newsletter": "^1.0.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "papaparse": "^5.5.3",
+    "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
+    "react-simple-code-editor": "^0.14.1",
     "recharts": "^3.1.0",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1"
